--- a/config.yml
+++ b/config.yml
@@ -13,4 +13,36 @@ before:
       - 00.1_first-steps.md
     data:
       dockerfileUrl: '%payload.repository.html_url%/new/master?filename=action-a/Dockerfile'
-steps: []
+
+steps:
+  # 1 - Add a Dockerfile
+  - title: Add a Dockerfile
+    description: Start your action by creating a Dockerfile
+    event: pull_request
+    link: "{{ repoUrl }}/issues/1"
+    actions:
+      - type: gate
+        gates:
+          - left: "%payload.action%"
+            operator: ===
+            right: opened
+          - left: "%payload.action%"
+            operator: ===
+            right: synchronize
+      - type: getTree
+        action_id: tree
+        recursive: true
+        sha: "%payload.pull_request.head.sha%"
+      - type: gate
+        left: "%actions.tree.data.tree%"
+        operator: includes
+        right: path:action-a/Dockerfile
+        else:
+          type: respond
+          with: 01.1_e-no-docker.md
+      - type: respond
+        with: 01.0_docker-success.md
+        data:
+          actionAUrl: "%payload.repository.html_url%/new/%payload.pull_request.head.ref%?filename=action-a/entrypoint.sh"
+      - type: closeIssue
+        issue: Welcome
