--- a/config.yml
+++ b/config.yml
@@ -21,7 +21,7 @@ steps:
     actions:
       - type: createIssue
         title: New issue
-        body: 01.0_action.md
+        body: 00.0_setup.md
         # Store the url for this new issue using the custom new_issue value
         store: 
           new_issue_url: '{{ result.data.html_url }}'
